tests/snapshots/fmt__Long group import.snap
---
source: tests/fmt.rs
expression: formatted
---
import foo.{
    BarBarBarBarBarBarBarBar,
    BazBazBazBazBazBazBazBaz,
    QuuxQuuxQuuxQuuxQuuxQuuxQuux,
};
