tests/snapshots/fmt__Long path chains.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    one
        .two
        .three
        .four
        .five
        .six
        .seven
        .eight
        .nine
        .ten
        .eleven
        .twelve
        .thirteen
        .fourteen
        .fifteen
        + one
            .two
            .three
            .four
            .five
            .six
            .seven
            .eight
            .nine
            .ten
            .eleven
            .twelve
            .thirteen
            .fourteen
            .fifteen
        + one
            .two
            .three
            .four
            .five
            .six
            .seven
            .eight
            .nine
            .ten
            .eleven
            .twelve
            .thirteen
            .fourteen
            .fifteen
}
