tests/snapshots/fmt__Longer Method chain.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    foo
        .new()
        .push(bar)
        .push(baz)
        .push(quux)
        .push(boop)
        .push(foofoofoofoo)
        .push(barbarbarbar);
}
