tests/snapshots/fmt__Mul and add electric boogaloo with comments.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    1010101010101010
        * 1010101010101010
        * 1010101010101010
        * 1010101010101010
        * 1010101010101010
        // foo
        + 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010
        // bar
        + 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010
}

fn main() {
    1010101010101010
        * 1010101010101010
        * 1010101010101010
        * 1010101010101010
        * 1010101010101010 // foo
        + 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010 // bar
        + 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010 // baz
}
