tests/snapshots/fmt__Mul and add electric boogaloo.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    1010101010101010
        * 1010101010101010
        * 1010101010101010
        * 1010101010101010
        * 1010101010101010
        + 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010
        + 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010
            * 1010101010101010
}
