tests/snapshots/fmt__Mul and add.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    101010101010101010
        + 1010101010101010 * 101010101010101010
        + 1010101010101010
}

fn main() {
    101010101010101010 * 1010101010101010
        + 101010101010101010 * 1010101010101010
}
