tests/snapshots/fmt__Multiple statements.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    foo.bar;
    foo.bar;

    baz.quux;
    baz.quux;

    boop
}
