tests/snapshots/fmt__Parentheses.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    (1 + 2) * 3;

    (((1 + 3 + 4 + (5 / 6))))
}
