tests/snapshots/fmt__Record with long type params.snap
---
source: tests/fmt.rs
expression: formatted
---
record Foo[
    BarBarBarBarBarBarBarBar,
    BazBazBazBazBazBazBazBaz,
    QuuxQuuxQuuxQuuxQuuxQuuxQuux,
] {}
