tests/snapshots/fmt__Two func with comments.snap
---
source: tests/fmt.rs
expression: formatted
---
// hellloooo
// whooo
fn foo() {}

// hellloooo
// whooo
fn bar() {}
